I call dpkg-architecture at most once
Previously I called it once for each DEB_HOST_... variable. Each of these calls
is slow, so minimizing how often it is done is good

--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -29,10 +29,14 @@ COND_DARWIN := $(filter Darwin,$(shell uname -s))
 SO          := $(if $(COND_DARWIN),dylib,so)
 
 ### For cross-building on Debian. If these tools aren't already defined, I
-### define them.
-# Memoize DEB_HOST_GNU_TYPE; will be evaluated only if needed, at most once
-DEB_HOST_GNU_TYPE  = $(if $(_DEB_HOST_GNU_TYPE),,$(eval _DEB_HOST_GNU_TYPE:=$(shell dpkg-architecture -qDEB_HOST_GNU_TYPE 2>/dev/null)))$(_DEB_HOST_GNU_TYPE)
-DEB_HOST_MULTIARCH = $(if $(_DEB_HOST_MULTIARCH),,$(eval _DEB_HOST_MULTIARCH:=$(shell dpkg-architecture -qDEB_HOST_MULTIARCH 2>/dev/null)))$(_DEB_HOST_MULTIARCH)
+### define them. This will work on Debian when building natively OR
+### cross-building. It will also work on any other non-arch for native builds
+# Function to evaluate ALL the _DEB_... architecture variables
+DPKG_ARCHITECTURE_EVAL = $(foreach v,$(shell dpkg-architecture 2>/dev/null),$(eval _$v))
+# Memoize DEB_HOST_... variables; dpkg-architecture will be called only if
+# needed, at most once
+DEB_HOST_GNU_TYPE  = $(if $(_DEB_HOST_GNU_TYPE),,$(strip $(DPKG_ARCHITECTURE_EVAL)))$(_DEB_HOST_GNU_TYPE)
+DEB_HOST_MULTIARCH = $(if $(_DEB_HOST_MULTIARCH),,$(strip $(DPKG_ARCHITECTURE_EVAL)))$(_DEB_HOST_MULTIARCH)
 TOOL_ARCH_PREFIX = $(if $(DEB_HOST_GNU_TYPE),$(DEB_HOST_GNU_TYPE)-)
 PKG_CONFIG     ?= $(TOOL_ARCH_PREFIX)pkg-config
 NM             ?= $(TOOL_ARCH_PREFIX)nm
