macos RPATH tag is more correct
I need @loader_path. Because when building Python extension modules,
@executable_path was python, and not THIS shared object

--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -62,7 +62,7 @@ RPATH_SUFFIX = $(call get_parentdir_relative_to_childdir,$(abspath .),$(dir $(ab
 ifeq ($(COND_DARWIN),)
   RPATH = '$$ORIGIN'$(RPATH_SUFFIX)
 else
-  RPATH = @executable_path$(RPATH_SUFFIX)
+  RPATH = @loader_path$(RPATH_SUFFIX)
 endif
 
 RPATH_OPTION = -Wl,-rpath,$(call RPATH,$@)
