Acquire PY_LDVERSION for macOS linking

--- a/Makefile.common.header
+++ b/Makefile.common.header
@@ -120,7 +120,7 @@ PYTHON_VERSION_FOR_EXTENSIONS ?= 3 # 2 or 3
 # thing at all
 #
 # Variables to ask Python about
-_PYVARS_LIST := CC CFLAGS CCSHARED INCLUDEPY BLDSHARED BLDLIBRARY LDFLAGS EXT_SUFFIX MULTIARCH
+_PYVARS_LIST := CC CFLAGS CCSHARED INCLUDEPY BLDSHARED BLDLIBRARY LDFLAGS LDVERSION EXT_SUFFIX MULTIARCH
 
 ifneq ($(DEB_HOST_MULTIARCH),)
   # We have a debian multiarch. We're almost certainly cross-building with
